第一可用版本

--- a/myparent/myweb-demo/src/main/webapp/index.html
+++ b/myparent/myweb-demo/src/main/webapp/index.html
@@ -5,6 +5,13 @@
     <title>myweb开发框架介绍</title>
 </head>
 <body>
-
+    <ol>
+        <li><a href="simple/string.do">simple/string.do</a></li>
+        <li><a href="simple/simpleparam.do?title=%e6%9d%8e%e5%85%88%e6%a3%ae&index=1">simple/simpleparam.do?title=这不是演习&index=1</a></li>
+        <li><a href="simple/simpleArray.do?inputs=1,2,3,4,5">simple/simpleArray.do?inputs=1,2,3,4,5</a></li>
+        <li><a href="simple/model.do?user.name=%e6%9d%8e%e5%85%88%e6%a3%ae&user.id=3326456&user.birthday=1985-02-25">simple/model.do?user.name=李先森&user.id=3326456&user.birthday=1985-02-25</a></li>
+        <li><a href="simple/csonstr.do?user.name=%e6%9d%8e%e5%85%88%e6%a3%ae&user.id=3326456&user.birthday=1985-02-25">simple/csonstr.do?user.name=李先森&user.id=3326456&user.birthday=1985-02-25</a></li>
+        <li><a href="simple/json.do?user.name=%e6%9d%8e%e5%85%88%e6%a3%ae&user.id=3326456&user.birthday=1985-02-25">simple/json.do?user.name=李先森&user.id=3326456&user.birthday=1985-02-25</a></li>
+    </ol>
 </body>
 </html>
